--- a/style.css
+++ b/style.css
@@ -383,3 +383,9 @@ body{
     justify-content: center;
     font-size: 1.5rem;
 }
+.mcp{
+    margin: 2rem;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+}
